--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "home_work",
+  "name": "homework",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,6 +15,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@feature-sliced/steiger-plugin": "^0.5.7",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/css-modules": "^1.0.5",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
@@ -22,8 +25,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "prettier": "^3.6.2",
+    "steiger": "^0.5.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
